fixed width of buttons in bottom nav bar to percentage instead of pixel amount so that it won't overflow in smaller screens; changed icon of recommend button to glyphicons share arrow instead of R; removed some commented out sectiosn from bottomnav.handlebars; slightly reduced size of images on index.handlebars from 200px by 300px to 180px by 280 px

--- a/public/css/getRead.css
+++ b/public/css/getRead.css
@@ -39,8 +39,7 @@
 }
 
 .navbar-btn {
-	padding-left: 30px;
-	padding-right: 30px
+	width: 20%;
 }
 
 .glyphicon {
